Don't wrap <html> with LayoutFullScreen.

Making an element fullscreen wraps it with a LayoutFullScreen, unless it
is the <html> element in which case Fullscreen::FullscreenElementChanged
specifically avoids wrapping it.

This patch updates the layout tree construction code to match the logic
used when entering fullscreen mode.  This ensures that toggling display:
none on a fullscreen <html> element doesn't inadvertently create a
LayoutFullScreen where we didn't have one before.

Bug: 676432
Change-Id: I847b49fe8efa3af2ae0e02c4879fe6dc89a6a146
Reviewed-on: https://chromium-review.googlesource.com/826468
Commit-Queue: Philip Jägenstedt <foolip@chromium.org>
Reviewed-by: Philip Jägenstedt <foolip@chromium.org>
Cr-Commit-Position: refs/heads/master@{#524215}
Former-commit-id: 229920bc36ac1e548ce1d0d9ab4877651005fba0